BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_FAPTokenTransaction__c.object
<CustomObject>
    <fields>
        <fullName>CP_RP_Case_ProtocolID__c</fullName>
        <formula>Hsvc_Case__r.HSvc_ProtocolId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ProtocolID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_RP_Case_Resolution__c</fullName>
        <formula>Hsvc_Case__r.HSvc_ResolutionCodeRule__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Resolution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FAP Token Transactions</relationshipLabel>
        <relationshipName>FAP_Token_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>FAP Token Transactions</relationshipLabel>
        <relationshipName>FAP_Token_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_BillingDealPrice__c</fullName>
        <label>Billing Deal Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_BillingDeal__c</fullName>
        <label>Billing Deal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>FAP Token Transactions</relationshipLabel>
        <relationshipName>FAP_Token_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hsvc_FAPTokenName__c</fullName>
        <label>FAP Token Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_IsValid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Valid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_Plan__c</fullName>
        <label>Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ProtocolId__c</fullName>
        <label>Protocol ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FAP Token Transaction</label>
    <nameField>
        <displayFormat>FTT-{000000}</displayFormat>
        <label>FAP Token Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAP Token Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>